--- a/src/styles/MainNav.module.css
+++ b/src/styles/MainNav.module.css
@@ -11,7 +11,7 @@
   background-color: #e5e5e5;
   width: 90%;
   padding: 1em;
-
+  z-index: 100;
 }
 
 .navList.active {
